Implemented endpoints to create Product and Category via formData
